@@ -3,7 +3,7 @@
 
 bin_PROGRAMS = sndfile-resample
 
-noinst_PROGRAMS = varispeed-play
+noinst_PROGRAMS = varispeed-play timewarp-file
 
 SAMPLERATEDIR =../src
 INCLUDES = -I$(srcdir)/$(SAMPLERATEDIR) @OS_SPECIFIC_INCLUDES@
@@ -20,6 +20,9 @@ sndfile_resample_LDADD = $(SAMPLERATEDIR)/libsamplerate.la $(SNDFILE_LIBS)
 
 varispeed_play_SOURCES = varispeed-play.c audio_out.c audio_out.h
 varispeed_play_LDADD = $(SAMPLERATEDIR)/libsamplerate.la $(SNDFILE_LIBS) $(OS_SPECIFIC_LINKS)
+
+timewarp_file_SOURCES = timewarp-file.c
+timewarp_file_LDADD = $(SAMPLERATEDIR)/libsamplerate.la $(SNDFILE_LIBS)
 
 
 
