@@ -1,3 +1,8 @@
+2005-11-19  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>
+
+    * examples/timewarp-file.c
+    New file.
+
 2005-09-06  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>
 
     * src/float_cast.h
